3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Fixed some mistakes in the alchemical formulae
 lib/formulae
Yann Chachkoff 2007-01-02

Removed unused defines, documentation fixes, no functional change.
 common/treasure.c: add some links for GT_xxx.
 include/treasure.h: add anchor 'GT_xxx'.
Ryo 2007-01-01

server/player.c: fix wrong message displayed. Make sp test coherent with draining for rod/horn.
Ryo 2007-01-01

Implement feature request #656191: Add blessings and curses to scrolls.
----
New flags: 'blessed', 'known_blessed'.
 common/item.c
 common/loader.l: new flag, and fix mistake on array size.
 include/define.h
----
Randomly set blessed/cursed on scrolls and spellbooks.
 common/treasure.c
----
Blessed/cursed/damned effect for scrolls and books.
 server/apply.c: effects, and also there should be a failure even if settings is no.
----
 server/spell_effect.c: add a check to be done.
Ryo 2007-01-01

Implement feature request #1536177: "Orc Knuckle" requires no dice.
If there is an "dice" archetype in server arches, this command will
require the player to have at least 4 dice to play. There is a 5%
chance to lose one dice at each play. Dice can be made through alchemy
(finding the recipe is left as an exercise to the player).
Note that the check is on the name 'dice', so you can have multiple
archetypes for that name, they'll be all taken into account.
 server/c_chat.c: change command.
 lib/formulae: add recipe.
----
 ChangeLog: fix date info (it's not american, but ISO)
Ryo 2007-01-01

Corrected garbage being displayed when examining an object, caused by an uninitialized buffer.
 server/c_object.c
Yann Chachkoff 2007-01-01
