@@ -15,6 +15,11 @@ else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 Changes for SVN:
 
+Implement feature request #1555532: Disallow enchanting armour/weapons while wearing/wielding it.
+Weapon/armour will be unequipped (unless cursed) if that would mean the player can't wear it anymore.
+ server/apply.c
+Ryo 2007-01-02
+
 Fixed some mistakes in the alchemical formulae
  lib/formulae
 Yann Chachkoff 2007-01-02
